# quickBayes

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  LICENSE  MANIFEST.in  README.md  conda_dict_to_yml.py  create_conda_yml.py  cython_setup.py  fortran_setup.py  pyproject.toml  quasielasticbayes-dev-linux.yml  quasielasticbayes-dev-mac.yml  quasielasticbayes-dev-win.yml  quickBayes-dev-linux.yml  quickBayes-dev-mac.yml  quickBayes-dev-win.yml  quickBayes-dev.yml  setup.py  test.py  v2_setup.py
.github/workflows/: ci-checks.yml  draft_JOSS.yml  flake8.yml  label_merge_conflicts.yml  linux_test.yml  mac_test.yml  merge.yml  release.yml  run_tests.yml  windows_tests.yml
bayesfitting/: QLwat_main.f90  QLwat_subs.f90
docs/: requirements.txt
docs/source/: api.rst  cf_methods.rst  conf.py  history.rst  index.rst  install.rst  intro.rst  introduction.rst  loglikelihood.rst  maths.rst  theory.rst  usage.rst
paper/: paper.bib  paper.md
quasielasticbayes/: Bayes.f90  Four.f90  Four_main.f90  QLdata_main.f90  QLdata_subs.f90  Util.f90  __init__.py  testing.py  util_main.f90
quasielasticbayes/python/: bayes.py  bayes_C.pyx  constants.py  data.py  fortran_python.py  fortran_python.pyx  four.py  four.pyx  qldata_main.py  qldata_subs.py  setup.py  util.py  util.pyx
quasielasticbayes/test/: FFT_test.py  Four_test.py  qldata_test.py  qlres_test.py  qlse_test.py
recipes/quickBayes/: meta.yml
src/c_python/: bayes.py  bayes_C.pyx  constants.py  data.py  fortran_python.pyx  four.pyx  qldata_main.py  qldata_subs.py  util.pyx
src/quasielasticbayes/: __init__.py  testing.py
src/quickBayes/: log_likelihood.py  make.py  makefile.txt
test/: Four_test.py  four_python_test.py  logLikelihood_test.py  muonexpdecay_test.py  pro_test.py  qldata_test.py  qldatav2_test.py  qlres_test.py  qlsev2_test.py  stuff_test.py
test/data/: FFT_test.txt  qse_res.npy
test/default/: gofitEngine_test.py  (+2 more)
tools/: clean.sh  conda_dict_to_yml.py  create_conda_yml.py  rebuild.sh  setup_helper.py  version.py
(+228 files in other folders)
