[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[project]
name = 'quickBayes'
version = "0.2.0b1"
requires-python = ">=3.7.1"
dependencies = ['numpy', 'scipy', 'gofit']
authors = [{name='Anthony Lim', email='anthony.lim@stfc.ac.uk'}]
description = 'Reading and writing for ISIS muon experiments'
readme = 'README.md'
license = {text = 'BSD'}

