[build-system]
requires = ['hatchling', 'pybind11[global]']
build-backend = 'hatchling.build'

[project]
name = 'quickBayes'
version = "1.0.1b0"
requires-python = ">=3.7.1"
dependencies = ['numpy<2.0.0', 'scipy']
authors = [{name='Anthony Lim', email='anthony.lim@stfc.ac.uk'}]
description = "A Bayesian fitting package used for model selection and grid searches of fits for neutron and muon data."
keywords=['bayesian', 'fitting', 'QENS', 'muons']
readme = 'README.md'
license = {text = 'BSD'}

[project.optional-dependencies]
docs = ["sphinx==7.3.7",
	'jupyter-book',
        "nbsphinx==0.9.4"]
gofit = ['pybind11[global]',
	 'eigen',
	 'gofit']


[project.urls]
Homepage = "https://quickbayes.readthedocs.io/en/latest/"
Documentation = "https://quickbayes.readthedocs.io/en/latest/"
Repository = 'https://github.com/ISISNeutronMuon/quickBayes'
